# xagtdep

./: .gitignore  CMakeLists.txt  LLVM_INTEGRATION.md  README.md  requirements.txt
.github/workflows/: ci.yml  regression.yml
doc/: ALGORITHM1_SPEC.md  SPEC.md
doc/aspdac2027/: SPEC.tex
include/: Function.h  NewMethod.h  QC.h  QCGateList.h  RandomXAG.h  XAG.h  XAGOptimizer.h  XagContext.h
src/: CMakeLists.txt
src/DavioDecomposition/: CMakeLists.txt  DavioDecomposition.cpp  DavioDecomposition.h
src/Function/: CMakeLists.txt  Function.cpp
src/NewMethod/: CMakeLists.txt  NewMethod.cpp  NewMethod.h
src/QC/: CMakeLists.txt  ExistingMethod.cpp  ExistingMethod.h  ProposedMethod.cpp  ProposedMethod.h  PythonBridge.cpp  PythonBridge.h  QC.cpp  QC.h  RandomXAG.cpp  XAGToDecomposed.cpp  XAGToDecomposed.h  XAGToGateList.cpp  XAGToGateList.h  qc_synthesis.py
src/XAG/: CMakeLists.txt  XAG.cpp  XAG.h
src/XAGOptimizer/: CMakeLists.txt  XAGOptimizer.cpp
test/: CIQCVerification.cpp  CMakeLists.txt  DavioDecompositionTest.cpp  FunctionTest.cpp  NewMethodTest.cpp  QCTest.cpp  QCVerificationCommon.cpp  QCVerificationCommon.h  QCVerificationTest.cpp  XAGOptimizerTest.cpp  XAGTest.cpp  ci_passing_set.json  compare_metrics.py  run_passes.sh  run_verification.sh  test_input.ll  verify_circuits.py
